--- a/cluster/flux/vars/cluster-settings.yaml
+++ b/cluster/flux/vars/cluster-settings.yaml
@@ -9,3 +9,4 @@ data:
   METALLB_LB_RANGE: 10.0.0.2-10.0.0.128
   METALLB_K8S_GATEWAY_ADDR: 10.0.0.2
   METALLB_INGRESS_ADDR: 10.0.0.3
+  UNIFI_LB: 10.0.0.4
