--- a/cluster/apps/default/jackett/config-pvc.yaml
+++ b/cluster/apps/default/jackett/config-pvc.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: jackett-config
+  namespace: default
 spec:
   accessModes:
     - ReadWriteOnce
