Correct ports fo jackett and add var for lb ip

--- a/cluster/apps/default/jackett/helm-release.yaml
+++ b/cluster/apps/default/jackett/helm-release.yaml
@@ -40,7 +40,7 @@ spec:
         loadBalancerIP: "${JACKETT_LB}"
         externalTrafficPolicy: Local
         ports:
-          http:
+          http-lb:
             enabled: true
             port: 9117
             protocol: HTTP
