--- a/cluster/apps/games/minecraft/helm-release.yaml
+++ b/cluster/apps/games/minecraft/helm-release.yaml
@@ -36,7 +36,7 @@ spec:
         memory: 10Gi
       requests:
         cpu: 1000m
-        memory: 6Gi
+        memory: 7Gi
     securityContext:
       runAsUser: 1000
       fsGroup: 1000
@@ -66,8 +66,8 @@ spec:
       worldSaveName: world
       viewDistance: 20
       forceReDownload: true
-      memory: ""
-      jvmXXOpts: "-XX:MaxRAMPercentage=75"
+      memory: 6144M
+      jvmXXOpts: "-Xms6G -Xmx6G -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1"
       spigetResources:
         - 36618
       #   # Dynmap
