--- a/cluster/apps/games/minecraft/config-pvc.yaml
+++ b/cluster/apps/games/minecraft/config-pvc.yaml
@@ -11,3 +11,16 @@ spec:
   resources:
     requests:
       storage: 10Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: minecraft-data-backup
+  namespace: games
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: local-path
+  resources:
+    requests:
+      storage: 50Gi
