--- a/cluster/apps/games/minecraft/kustomization.yaml
+++ b/cluster/apps/games/minecraft/kustomization.yaml
@@ -2,4 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - config-pvc.yaml
-  - helm-release.yaml
+  - config-pvc-minecraft-paper.yaml
+  - minecraft-vanilla.yaml
+  - minecraft-paper.yaml
+  - rcon-web-admin.yaml
