--- a/cluster/apps/games/minecraft/rcon-web-admin.yaml
+++ b/cluster/apps/games/minecraft/rcon-web-admin.yaml
@@ -41,4 +41,4 @@ spec:
       rconHost: minecraft-minecraft-rcon
       rconPasswordExistingSecret: rcon-password
     extraEnv:
-      TZ: ${TZ}
+      TZ: "Ireland/Dublin"
