--- a/cluster/apps/games/minecraft/rcon-web-admin.yaml
+++ b/cluster/apps/games/minecraft/rcon-web-admin.yaml
@@ -21,7 +21,7 @@ spec:
       requests:
         memory: 512Mi
         cpu: 200m
-      limit:
+      limits:
         memory: 512Mi
         cpu: 400m
     ingress:
