--- a/cluster/apps/games/minecraft/minecraft-paper.yaml
+++ b/cluster/apps/games/minecraft/minecraft-paper.yaml
@@ -106,16 +106,16 @@ spec:
               cert-manager.io/cluster-issuer: letsencrypt-production
               external-dns.home.arpa/enabled: "true"
               external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
-              hajimari.io/appName: Minecraft-paper
+              hajimari.io/appName: Minecraft
               hajimari.io/enable: "true"
               hajimari.io/icon: simple-icons:minecraft
               hajimari.io/group: games
             hosts:
-              - name: &host "minecraft-paper.${SECRET_DOMAIN}"
+              - name: &host "minecraft.${SECRET_DOMAIN}"
                 paths:
                   - path: /
                     pathType: Prefix
             tls:
-              - secretName: "minecraft-paper.${SECRET_DOMAIN}"
+              - secretName: "minecraft.${SECRET_DOMAIN}"
                 hosts:
                   - *host
