Add secrets for rcon and re-enable rcon

--- a/cluster/apps/games/minecraft/minecraft-paper.yaml
+++ b/cluster/apps/games/minecraft/minecraft-paper.yaml
@@ -78,6 +78,7 @@ spec:
       jvmXXOpts: "-Xms4G -Xmx4G -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1"
       rcon:
         enabled: true
+        existingSecret: minecraft-rcon-credentials
         serviceType: ClusterIP
       serviceType: LoadBalancer
       extraPorts:
@@ -104,7 +105,7 @@ spec:
             enabled: true
             annotations:
               cert-manager.io/cluster-issuer: letsencrypt-production
-              external-dns.home.arpa/enabled: "true"
+              external-dns.home.arpa/enablerd: "true"
               external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
               hajimari.io/appName: Minecraft
               hajimari.io/enable: "true"
