Use LB port for rcon

--- a/cluster/flux/vars/cluster-settings.yaml
+++ b/cluster/flux/vars/cluster-settings.yaml
@@ -11,5 +11,5 @@ data:
   METALLB_INGRESS_ADDR: 10.0.0.3
   UNIFI_LB: 10.0.0.4
   JACKETT_LB: 10.0.0.5
-  MINECRAFT_LB: 10.0.0.6
+  MINECRAFT_PAPER_RCON_LB: 10.0.0.6
   MINECRAFT_PAPER_LB: 10.0.0.7
