--- a/cluster/apps/games/minecraft/minecraft-paper.yaml
+++ b/cluster/apps/games/minecraft/minecraft-paper.yaml
@@ -79,7 +79,8 @@ spec:
       rcon:
         enabled: true
         existingSecret: minecraft-rcon-credentials
-        serviceType: ClusterIP
+        serviceType: LoadBalancer
+        loadBalancerIP: ${MINECRAFT_PAPER_RCON_LB}
       serviceType: LoadBalancer
       extraPorts:
         - name: metrics
