Correct ingress for hass

--- a/cluster/apps/default/home-assistant/helm-release.yaml
+++ b/cluster/apps/default/home-assistant/helm-release.yaml
@@ -86,7 +86,7 @@ spec:
         tls:
           - hosts:
               - *host
-            secretName: hass-tls"
+            secretName: "hass-tls"
     resources:
       requests:
         cpu: 50m
