--- a/cluster/apps/default/home-assistant/helm-release.yaml
+++ b/cluster/apps/default/home-assistant/helm-release.yaml
@@ -70,7 +70,7 @@ spec:
           external-dns/is-public: "true"
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
           hajimari.io/enable: "true"
-          hajimari.io/icon: "video-input-antenna"
+          hajimari.io/icon: "home-assistant"
         hosts:
           - host: &host "hass.${SECRET_DOMAIN}"
             paths:
