Set secrets to stringData

--- a/cluster/apps/default/mosquitto/secret.sops.yaml
+++ b/cluster/apps/default/mosquitto/secret.sops.yaml
@@ -4,8 +4,8 @@ kind: Secret
 metadata:
     name: mosquitto
     namespace: default
-data:
-    mosquitto_pwd: ENC[AES256_GCM,data:/xBsubzqY/6vgDYOqBs9WnJMNWZk,iv:kAHUbxoDS07lZbcU6acO2SlsZwchubnWG1bV5KQIHis=,tag:EAdAdBoLLFow019tFqjkKw==,type:str]
+stringData:
+    mosquitto_pwd: ENC[AES256_GCM,data:07f9p9rvxuArts7B+fUkgsZoOVt6,iv:Qz+SfeSP0Xf7G4BTldIQ3G6RXn0jrYgBn8wPFXyo2H8=,tag:jtD1gH2lzodf6qGmRM4kbA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             MStYbE9kRlZhTnBURlo5ajZRZDJ3Rk0Kl+85aFBK9v3l5vDmnerk46lE0Ywh08ZM
             EHUV4i3dbRYuP0HcYuhGpdNujuIITwpuBMHDGVFrhqsadb3KM74wvQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-11-04T17:40:51Z"
-    mac: ENC[AES256_GCM,data:6lsDJQf0gqr91lKEbDPr5JH4BW+Pw868ooSt1PWpS9U596OuOcIobx1RxCQvj6/G4JwCdaFFOY3ltvMHqi6VYe9ADqwqGug+Z/TGPKBGR/AQ4YRfkrezvNR/M0AR5mp80GlgVeZrRrZVbL9eqT0lo6baH4ZKeWYiBjJ9217Obao=,iv:x97UOZSD/bYKRiJNNnRyR8ZSWWnd22e0HQaOdX8emrQ=,tag:zxnHuzD+y2MnlmmyA7jCVw==,type:str]
+    lastmodified: "2023-11-06T22:23:00Z"
+    mac: ENC[AES256_GCM,data:YpbabxWNUAc07a/1l630pdL0OVQ+w3u+hw1IElcfz5y0VSlhHR3YraGo75JQ5FCzGpaFeNa1ilMr7AeB59InLZZhFfFzztziA5t+nxgG7+LsW3+gXQcHlARU9Z0v+XrWk2reJ6kYK9R2GIdq1fgfuKmzmRrv91OFdaEtQTvhoDU=,iv:Hjq+dER9OGukBlKdkWZpbpd4SEiiXMqmOOg3gcfX53c=,tag:AIOoHqbWyDp/wCemz4gE7w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
