Test fsGroup on secret mount

--- a/cluster/apps/default/mosquitto/helm-release.yaml
+++ b/cluster/apps/default/mosquitto/helm-release.yaml
@@ -25,6 +25,8 @@ spec:
     image:
       repository: public.ecr.aws/docker/library/eclipse-mosquitto
       tag: 2.0.18
+    securityContext:
+      fsGroup: 1883
     persistence:
       data:
         enabled: true
