Move SC to pod level

--- a/cluster/apps/default/mosquitto/helm-release.yaml
+++ b/cluster/apps/default/mosquitto/helm-release.yaml
@@ -25,7 +25,7 @@ spec:
     image:
       repository: public.ecr.aws/docker/library/eclipse-mosquitto
       tag: 2.0.18
-    securityContext:
+    podSecurityContext:
       fsGroup: 1883
     persistence:
       data:
