Set mqtt loadblanacer IP specifically

--- a/cluster/flux/vars/cluster-settings.yaml
+++ b/cluster/flux/vars/cluster-settings.yaml
@@ -11,6 +11,6 @@ data:
   METALLB_INGRESS_ADDR: 10.0.0.3
   UNIFI_LB: 10.0.0.4
   JACKETT_LB: 10.0.0.5
-  MINECRAFT_PAPER_RCON_LB: 10.0.0.6
+  MQTT_LB: 10.0.0.6
   MINECRAFT_PAPER_LB: 10.0.0.7
   HASS_LB: 10.0.0.9
