--- a/cluster/apps/default/mosquitto/helm-release.yaml
+++ b/cluster/apps/default/mosquitto/helm-release.yaml
@@ -49,7 +49,7 @@ spec:
       main:
         type: LoadBalancer
         loadBalancerIP: "${MQTT_LB}"
-        externalTrafficPolicy: Cluster
+        externalTrafficPolicy: Local
         ports:
           http:
             port: 1883
