--- a/cluster/apps/default/home-assistant/helm-release.yaml
+++ b/cluster/apps/default/home-assistant/helm-release.yaml
@@ -22,7 +22,7 @@ spec:
     remediation:
       retries: 5
   values:
-    contoller:
+    controller:
       main:
         hostNetwork: true
         dnsPolicy: ClusterFirstWithHostNet
