--- a/cluster/apps/games/palworld/helmrelease.yaml
+++ b/cluster/apps/games/palworld/helmrelease.yaml
@@ -41,6 +41,19 @@ spec:
           name: palworld-secret
     service:
       main:
+        ports:
+          http:
+            enabled: false
+            primary: false
+          port1:
+            enabled: true
+            port: 8211
+            protocol: UDP
+          port2:
+            enabled: true
+            port: 27015
+            protocol: UDP
+      lb:
         type: LoadBalancer
         externalTrafficPolicy: Local
         loadBalancerIP: "${PALWORLD_LB}"
@@ -68,6 +81,24 @@ spec:
         enabled: false
       readiness:
         enabled: false
+    ingress:
+      main:
+        enabled: true
+        ingressClassName: "nginx"
+        annotations:
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
+          external-dns/is-public: "true"
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
+          hajimari.io/enable: "true"
+          hajimari.io/icon: "game"
+        hosts:
+          - host: &host "palworld.${SECRET_DOMAIN}"
+            paths:
+              - path: /
+        tls:
+          - hosts:
+              - *host
+            secretName: "palworld-tls"
     resources:
       requests:
         cpu: 2000m
