--- a/cluster/apps/games/palworld/helmrelease.yaml
+++ b/cluster/apps/games/palworld/helmrelease.yaml
@@ -40,7 +40,7 @@ spec:
       - secretRef:
           name: palworld-secret
     service:
-      lb:
+      main:
         type: LoadBalancer
         externalTrafficPolicy: Local
         loadBalancerIP: "${PALWORLD_LB}"
