--- a/cluster/apps/games/palworld/secret.sops.yaml
+++ b/cluster/apps/games/palworld/secret.sops.yaml
@@ -5,7 +5,7 @@ metadata:
     name: palworld-secret
     namespace: games
 stringData:
-    SERVER_PASSWORD: ENC[AES256_GCM,data:1RIccASxvqoTMftEhPU=,iv:9tfq8FnLnEKYV5U/VlL0o3SLPJ5kFKo1dWbduS2Jcx8=,tag:xzx1XMFbb5LPrJmimHU9cg==,type:str]
+    SERVER_PASSWORD: ENC[AES256_GCM,data:SiNajHQsuS2XgTCV,iv:W9k0AiKwiRTLS5TgFnlJUkxY2tHLOiEZ1EAirPkHMzM=,tag:C+NNU+lGSMIo/iYW/ezahQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +21,8 @@ sops:
             cUl5QXFwSG85bUtkUFk4aEpBdFNMQmcKur8KveEMTc/MRrvGPTWMjQaIQ4w2lCOt
             jKenjsnnhDJAKd4xI0ng+LK0LeGN19r3xAUdOzRlNqIgLB0iKcdVmQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-01-29T23:31:23Z"
-    mac: ENC[AES256_GCM,data:snQh+tSgCZx+eDLxyTaA2B1N7Q87niOE3cOrttDulbeurV8St6MvcvSPV0yfz3xFQn+B0HFtzqy8vyuXJlVYUt/WEtHjdjmTvCdhg/KoQswpp6UzbMGW3mRHMj6AXwyeREzKAoMXjSbAgFQfoZIWzYjGRY3E4AmBl7iSPx4n7Wk=,iv:ekQvkX0yW4TcYGJ0ovj69Y2cdaKisqWXCpZey6E54gE=,tag:IasJOtDa3Kz9st+jGcvasg==,type:str]
+    lastmodified: "2024-01-31T20:06:27Z"
+    mac: ENC[AES256_GCM,data:XETEFE7dP67otI7dikP8dk/R7NckHaTBAS9kprDn3cgjOGEB0fhIIjCGt4x/S+ZA/tMdZez3ydBhwzxRAb+u9xWR898fxsYHJ2FXvxGwbupdUfSL8TSyvBpqGpOALSPigGHODNG3ZBMjTzsdGnPrqjR2GkUcHsl7cy91p4o4vxs=,iv:aEh5hwZoH5T9av1kawCUxWqRSzfY4CoD+fGL97cFcgo=,tag:T21D4MddLQfjfRI8Uvskbg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
