--- a/cluster/apps/default/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/default/zigbee2mqtt/helm-release.yaml
@@ -36,7 +36,7 @@ spec:
       ZIGBEE2MQTT_CONFIG_ADVANCED_channel: 15
       ZIGBEE2MQTT_CONFIG_ADVANCED_LEGACY_API: "false"
       ZIGBEE2MQTT_CONFIG_ADVANCED_LEGACY_AVAILABILITY_PAYLOAD: "false"
-      ZIGBEE2MQTT_CONFIG_ADVANCED_LOG_LEVEL: info # debug
+      ZIGBEE2MQTT_CONFIG_ADVANCED_LOG_LEVEL: debug # debug
       ZIGBEE2MQTT_CONFIG_DEVICE_OPTIONS_LEGACY: "false"
       ZIGBEE2MQTT_CONFIG_DEVICE_OPTIONS_RETAIN: "true"
       ZIGBEE2MQTT_CONFIG_EXPERIMENTAL_NEW_API: "true"
@@ -51,7 +51,7 @@ spec:
       ZIGBEE2MQTT_CONFIG_MQTT_VERSION: 5
       ZIGBEE2MQTT_CONFIG_PERMIT_JOIN: "true"
       ZIGBEE2MQTT_CONFIG_SERIAL_DISABLE_LED: "false"
-      ZIGBEE2MQTT_CONFIG_SERIAL_PORT: tcp://10.0.1.51:8888
+      ZIGBEE2MQTT_CONFIG_SERIAL_PORT: tcp://10.0.1.52:8888
     envFrom:
       - secretRef:
           name: zigbee2mqtt
