--- a/cluster/apps/default/kustomization.yaml
+++ b/cluster/apps/default/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./unifi
   - ./jackett
   - ./home-assistant
-  # Back and than delete zha before enabling
   - ./zigbee2mqtt
+  - ./openwakeword
   - ./mosquitto
   - ./tautulli
