--- a/cluster/apps/default/openwakeword/helm-release.yaml
+++ b/cluster/apps/default/openwakeword/helm-release.yaml
@@ -26,21 +26,17 @@ spec:
   uninstall:
     keepHistory: false
   values:
-    controllers:
-      main:
-        strategy: RollingUpdate
-        rollingUpdate:
-          unavailable: 0
-        containers:
-          main:
-            image:
-              repository: rhasspy/wyoming-openwakeword
-              tag: 1.10.0
-            args:
-              - --preload-model
-              - "ok_nabu"
-              - --custom-model-dir
-              - /custom
+    controller:
+      replicas: 1
+      strategy: RollingUpdate
+    image:
+      repository: rhasspy/wyoming-openwakeword
+      tag: 1.10.0
+    args:
+      - --preload-model
+      - "ok_nabu"
+      - --custom-model-dir
+      - /custom
 
     service:
       main:
