--- a/cluster/apps/default/home-assistant/kustomization.yaml
+++ b/cluster/apps/default/home-assistant/kustomization.yaml
@@ -4,3 +4,5 @@ kind: Kustomization
 resources:
   - ./helm-release.yaml
   - ./home-assistant-pvc.yaml
+patchesStrategicMerge:
+  - load-balancer.yaml
